[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boss/Spinner/CannonSpinner.gd" type="Script" id=1]
[ext_resource path="res://Boss/Spinner/CannonSpinner.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.1688, 19.2364 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.0317, 18.3473 )

[node name="CannonSpinner" type="KinematicBody2D"]
script = ExtResource( 1 )
_shoot_time = 0.1
_radius = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.35182, 0.615826 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Rotater"]
position = Vector2( 5.72205e-06, -1.63516 )
scale = Vector2( 1.78042, 1.67822 )
texture = ExtResource( 2 )

[node name="DamageBox" type="Area2D" parent="."]

[node name="DamageBox" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 0.629951, -0.629959 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="DamageBox" to="." method="_on_DamageBox_area_entered"]
